--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,7 @@
 *.c4d filter=lfs diff=lfs merge=lfs -textssssssssssssssssssssssss
 *.collada filter=lfs diff=lfs merge=lfs -text
 *.dae filter=lfs diff=lfs merge=lfs -text
-*.dxf filter=lfs diff=lfs merge=lfs -text
+*.dxf filter=lfs diff=lfs merge=lfs -textaaaaaaaaaaa
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.jas filter=lfs diff=lfs merge=lfs -text
 *.lws filter=lfs diff=lfs merge=lfs -text
